--- a/group2.html
+++ b/group2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AKA tribute page</title>
     <link rel="stylesheet" type="text/css" href="group2.css">
 </head>
 <body>
@@ -104,5 +104,7 @@ AKA is not only a talented rapper but also a savvy businessman. He has collabora
   </div>
  </div>
  <p  style="color: white; text-align: right;">By Khanyisile and Frankdeeply</p>
+    <p style="color: white; text-align: right;">References: Wikipedia. 
+        <a href="https://en.wikipedia.org/wiki/AKA_(rapper)"> Click to view AKA Wikipedia page</a></p>
 </body>
 </html>
